# astrbot_plugin_palworld

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: commands.md  configuration.md
docs/design/: settings-redesign-demo.html
docs/images/: README.md
docs/verification/: real-server-checklist.md
frontend/: dev.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/scripts/: normalize-eol.mjs  verify-bundle.mjs
frontend/src/: App.test.ts  App.vue  global.d.ts  main.ts
metadata/: actions.json  pals.zh-CN.json  settings.zh-CN.json
pages/settings/: app.js  index.html  settings.js  status.js  style.css
palchronicle/: __init__.py  config.py  container.py
palchronicle/adapters/: metadata_repository.py  normalizer.py  palworld_rest.py  privacy_filter.py  sqlite_repository.py
palchronicle/application/: base_service.py  event_service.py  feature_groups.py  guild_service.py  player_service.py  query_service.py  report_service.py  routing_service.py  snapshot_service.py
palchronicle/domain/: enums.py  events.py  models.py
palchronicle/infrastructure/: cache.py  database.py  locks.py  migrations.py  salt.py  scheduler.py
palchronicle/presentation/: command_registry.py  commands.py  config_view.py  dtos.py  formatters.py  locale.py  server_arg.py  web_api.py
palworld_terminal/: __init__.py  config.py  container.py
palworld_terminal/adapters/: icon_repository.py  metadata_repository.py  normalizer.py  palworld_rest.py  repo_audit.py  repo_dex.py  repo_event.py  repo_guild_base.py  repo_player_binding.py  repo_player_profile.py  repo_routing.py  repo_world.py  sqlite_repository.py
palworld_terminal/application/: admin_service.py  (+19 more)
tests/: conftest.py
(+346 files in other folders)
