# 本文件仅承载开发工具配置（ruff 等），不含打包语义——
# 插件由 AstrBot 直接加载源码分发，勿在此添加 [project] / [build-system]。

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [".venv", "docs"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle 错误
    "F",  # pyflakes
    "W",  # pycodestyle 警告
    "I",  # isort（import 排序）
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# 测试代码沿用紧凑写法（分号串联 setup 语句、单行长参数构造），不强制拆行。
"tests/**" = ["E501", "E702"]

[tool.mypy]
# 务实基线：只查 palworld_terminal/（tests 沿用鸭子类型 fake，不纳入检查）。
python_version = "3.11"
files = ["palworld_terminal"]
ignore_missing_imports = true

[tool.importlinter]
root_package = "palworld_terminal"

[[tool.importlinter.contracts]]
name = "Hexagonal layered architecture"
type = "layers"
containers = ["palworld_terminal"]
layers = [
    "presentation",
    "application | adapters",
    "infrastructure",
    "shared",
    "domain",
]

[[tool.importlinter.contracts]]
name = "presentation must not import adapters directly"
type = "forbidden"
source_modules = ["palworld_terminal.presentation"]
forbidden_modules = ["palworld_terminal.adapters"]
